# jrg-gitit

./: .gitignore  README.md  Tests.page  default.nix  jrg-gitit.cabal  jrg-gitit.hs  shell-alternate.nix  shell.nix  test.conf
src/: jrg-gitit.hs
