name:                 jrg-gitit
version:              0.0.0.0
Cabal-version:        >= 1.8
build-type:           Simple

category:             Network
license:              GPL
license-file:         LICENSE


Source-repository head
  type:           git
  location:       git://github.com/jraygauthier/jrg-gitit.git

Executable            jrg-gitit
  hs-source-dirs:     src
  main-is:            jrg-gitit.hs
  build-depends:      base >=3 && < 5,
                      gitit,
                      mtl,
                      hslogger,
                      bytestring,
                      utf8-string,
                      directory,
                      network-uri >= 2.6 && < 2.7, 
                      network >= 2.6,
                      jrg-gitit-plugins

  extensions:         CPP
  ghc-options:        -Wall -threaded
  ghc-prof-options:   -fprof-auto-exported -rtsopts
